// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarContext should apply a hook for clearing a toolbar field through redux: clear single field 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "billing_provider": null,
        "type": "SET_QUERY_RHSM_billing_provider",
        "viewId": undefined,
      },
    ],
  ],
  [
    [
      {
        "id": "undefined-inverted",
        "type": "SET_GRAPH_LEGEND",
        "value": null,
      },
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "filter": "category",
        "type": "SET_QUERY",
        "value": null,
        "viewId": undefined,
      },
    ],
  ],
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "sla": null,
        "type": "SET_QUERY_RHSM_sla",
        "viewId": undefined,
      },
    ],
  ],
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "type": "SET_QUERY_RHSM_usage",
        "usage": null,
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarContext should apply a hook for clearing specific active toolbar fields through redux: clear all fields 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "billing_provider": null,
        "type": "SET_QUERY_RHSM_billing_provider",
        "viewId": undefined,
      },
    ],
  ],
  [
    [
      {
        "id": "undefined-inverted",
        "type": "SET_GRAPH_LEGEND",
        "value": null,
      },
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "filter": "category",
        "type": "SET_QUERY",
        "value": null,
        "viewId": undefined,
      },
    ],
  ],
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "sla": null,
        "type": "SET_QUERY_RHSM_sla",
        "viewId": undefined,
      },
    ],
  ],
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "type": "SET_QUERY_RHSM_usage",
        "usage": null,
        "viewId": undefined,
      },
    ],
  ],
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "billing_provider": null,
        "type": "SET_QUERY_RHSM_billing_provider",
        "viewId": undefined,
      },
    ],
  ],
  [
    [
      {
        "id": "undefined-inverted",
        "type": "SET_GRAPH_LEGEND",
        "value": null,
      },
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "filter": "category",
        "type": "SET_QUERY",
        "value": null,
        "viewId": undefined,
      },
    ],
  ],
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "sla": null,
        "type": "SET_QUERY_RHSM_sla",
        "viewId": undefined,
      },
    ],
  ],
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "type": "SET_QUERY_RHSM_usage",
        "usage": null,
        "viewId": undefined,
      },
    ],
  ],
  [
    [
      {
        "currentFilter": null,
        "type": "SET_FILTER_TYPE",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarContext should apply a hook for retrieving secondary toolbar field components: secondary field, rangedMonthly 1`] = `
{
  "itemFields": [],
  "secondaryFields": [
    <ToolbarItem>
      <RangedMonthly
        isFilter={false}
        isSecondary={true}
      />
    </ToolbarItem>,
  ],
}
`;

exports[`ToolbarContext should return specific properties: specific properties 1`] = `
{
  "useToolbarFieldClear": [Function],
  "useToolbarFieldClearAll": [Function],
  "useToolbarFields": [Function],
}
`;
